--- a/index.html
+++ b/index.html
@@ -6,51 +6,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luis Encastin</title>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <style> @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700;900&display=swap'); </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="index.js"></script>
 </head>
-<style>
-    #header{
-        width: 100%;
-        height: 30px;
-        background-color: lightslategrey;
-    }
-    section{
-        height: 100vh;
-        width: 100%;
-    }
-    #principal{
-        background-color: lightsalmon;
-    }
-    #introduction{
-        background-color: lightgreen;
-    }
-    #skills{
-        background-color: lightseagreen;
-    }
-    #portfolio{
-        background-color: lightsalmon;
-    }
-    #contact{
-        background-color: lightgreen;
-    }
-    #footer{
-        background-color: lightseagreen;
-        height: 30px;
-    }
-</style>
 <body>
    <header id="header">
 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-fixed">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    
    </header>
-   <section class="section" id="principal"></section>
-   <section class="section" id="introduction"></section>
-   <section class="section" id="skills"></section>
-   <section class="section" id="portfolio"></section>
+   <section class="section" id="principal">
+        <div class="principalContainer">
+            <div class="principalContainer--img">
+
+            </div>
+            <div class="principalContainer--body">
+                <h1 class="principalContainer--title">Card title</h1>
+                <p class="principalContainer--Description">Description.</p>
+            </div>
+        </div>
+   </section>
+   <section class="section" id="introduction">
+       <div>
+           <h2>Introduction</h2>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio placeat quasi aperiam non nesciunt, provident ex eligendi exercitationem sunt explicabo porro veritatis quia, labore, beatae maiores blanditiis hic cumque ea.</p>
+       </div>
+   </section>
+   <section class="section" id="skills">
+       <div id="skillsContainer">
+            <div class="itema" id="item1"><img src="./js challenge.jpg" alt=""><span id="span"></span></div>
+            <div class="itema" id="item2"><img src="./js challenge.jpg" alt=""></div>
+            <div class="itema" id="item3"><img src="./js challenge.jpg" alt=""></div>
+            <div class="itema" id="item4"><img src="./js challenge.jpg" alt=""></div>
+            <div class="itema" id="item5"><img src="./js challenge.jpg" alt=""></div>
+            <div class="itema" id="item6"><img src="./js challenge.jpg" alt=""></div>
+            <div class="itema" id="item7"><img src="./js challenge.jpg" alt=""></div>
+            <div class="itema" id="item8"><img src="./js challenge.jpg" alt=""></div>
+       </div>
+   </section>
+   <section class="section" id="portfolio">
+       <div id="portfolioContainer">
+            <div class="item" id="itemA">test</div>
+            <div class="item" id="itemB">test</div>
+            <div class="item" id="itemC">test</div>
+            <div class="item" id="itemD">test</div>
+            <div class="item" id="itemE">test</div>
+            <div class="item" id="itemF">test</div>
+            <div class="item" id="itemG">test</div>
+            <div class="item" id="itemH">test</div>
+        </div>
+   </section>
    <section class="section" id="contact"></section>
    <footer id="footer"></footer>
    
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
 </html>
