Se añaden proyectos al portafolio

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto me-5 mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Introduction</a>
+                <a class="nav-link active" aria-current="page" href="#introduction">Introduction</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Skills</a>
+                <a class="nav-link" href="#skills">Skills</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">Portfolio</a>
+                <a class="nav-link" href="#portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#contact">Contact</a>
               </li>
             </ul>
           </div>
@@ -57,9 +57,9 @@
    <section class="section" id="introduction">
     <div class="introductionContainer">
       <h2>Who am I?</h2><br>
-      <h3>I'm a self-taught web developer and digital marketing passionate.</h3><br>
+      <h3>I'm a Javascript web developer and digital marketing passionate.</h3><br>
       <p>I aspire to create meaningful digital solutions, always driven to achieve the best results for the final customer and my team.<br>
-      I’ve experience working within digital marketing teams using agile frameworks like SCRUM.</p>
+      I’ve experience working within cross-skilled teams using agile frameworks like SCRUM.</p>
       <p><b>Name:</b> José Luis Encastin Flores</p>
       <p><b>Age:</b> 27 years.</p>
       <p><b>Location:</b> Toluca, Mexico.</p>
@@ -147,105 +147,129 @@
           Here are some projects that I would like to share.</p>
       <div class="portfolioGrid">
           <div class="project">
-              <h3>Project's name1</h3>
+              <h3>Memories App</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
               <div class="project--caption">
-                  <img src="/" alt="Project Caption">
+                <img src="https://i.ibb.co/vsTgtwb/memories-App.jpg" alt="memories-App">
               </div>
               <div class="project--subcontainer">
                   <div class="project--button">
-                      <p>Project</p>
-                      <img src="https://img.icons8.com/ios-glyphs/30/000000/portfolio.png" style="height: 25px; width: 25px;"/>
+                      <a href="https://memories-react-app-le.netlify.app/" target="_blank">
+                        <p>Project</p>
+                        <img src="https://img.icons8.com/ios-glyphs/30/000000/portfolio.png" style="height: 25px; width: 25px;"/>
+                      </a>
                   </div>
                   <div class="project--button">
-                      <p>Github</p>
-                      <div class="icons8-github2__img"></div>
+                      <a href="https://github.com/LuisEncastin/memories-react-app-le" target="_blank">
+                        <p>Github</p>
+                        <div class="icons8-github2__img"></div>
+                      </a>
                   </div>
               </div>
           </div>
           <div class="project">
-              <h3>Project's name2</h3>
+              <h3>Travel Advisor app</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
               <div class="project--caption">
-                  <img src="/" alt="Project Caption">
+                <img src="https://i.ibb.co/b7bDcS7/travel-Advisor-App.jpg" alt="travel-Advisor-App">
               </div>
               <div class="project--subcontainer">
-                  <div class="project--button">
+                <div class="project--button">
+                    <a href="https://traveladvisorreactapp.netlify.app/" target="_blank">
                       <p>Project</p>
                       <img src="https://img.icons8.com/ios-glyphs/30/000000/portfolio.png" style="height: 25px; width: 25px;"/>
-                  </div>
-                  <div class="project--button">
+                    </a>
+                </div>
+                <div class="project--button">
+                    <a href="https://github.com/LuisEncastin/travelReactApp" target="_blank">
                       <p>Github</p>
                       <div class="icons8-github2__img"></div>
-                  </div>
+                    </a>
+                </div>
               </div>
           </div>
           <div class="project">
-              <h3>Project's name3</h3>
+              <h3>Memory cards game</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
               <div class="project--caption">
-                  <img src="/" alt="Project Caption">
+                <img src="https://i.ibb.co/MM64Pwy/memories-App.jpg" alt="memories-App">
               </div>
               <div class="project--subcontainer">
-                  <div class="project--button">
+                <div class="project--button">
+                    <a href="https://memoryreactapp.netlify.app/" target="_blank">
                       <p>Project</p>
                       <img src="https://img.icons8.com/ios-glyphs/30/000000/portfolio.png" style="height: 25px; width: 25px;"/>
-                  </div>
-                  <div class="project--button">
+                    </a>
+                </div>
+                <div class="project--button">
+                    <a href="https://github.com/LuisEncastin/memoramaReact" target="_blank">
                       <p>Github</p>
                       <div class="icons8-github2__img"></div>
-                  </div>
+                    </a>
+                </div>
               </div>
           </div>
           <div class="project">
-              <h3>Project's name4</h3>
+              <h3>Practical Javascript</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
               <div class="project--caption">
-                  <img src="/" alt="Project Caption">
+                <img src="https://i.ibb.co/89y880H/javascript-Practico.jpg" alt="javascript-Practico">
               </div>
               <div class="project--subcontainer">
-                  <div class="project--button">
+                <div class="project--button">
+                    <a href="https://luisencastin.github.io/JavascriptMeanMedianMode/" target="_blank">
                       <p>Project</p>
                       <img src="https://img.icons8.com/ios-glyphs/30/000000/portfolio.png" style="height: 25px; width: 25px;"/>
-                  </div>
-                  <div class="project--button">
+                    </a>
+                </div>
+                <div class="project--button">
+                    <a href="https://github.com/LuisEncastin/JavascriptMeanMedianMode" target="_blank">
                       <p>Github</p>
                       <div class="icons8-github2__img"></div>
-                  </div>
+                    </a>
+                </div>
               </div>
           </div>
           <div class="project">
-              <h3>Project's name5</h3>
+              <h3>Mobile First: batatabit.</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
               <div class="project--caption">
-                  <img src="/" alt="Project Caption">
+                <img src="https://i.ibb.co/X8sDY9v/batatabit.jpg" alt="batatabit">
               </div>
               <div class="project--subcontainer">
-                  <div class="project--button">
+                <div class="project--button">
+                    <a href="https://luisencastin.github.io/Mobile_first_Batatabit_project/" target="_blank">
                       <p>Project</p>
                       <img src="https://img.icons8.com/ios-glyphs/30/000000/portfolio.png" style="height: 25px; width: 25px;"/>
-                  </div>
-                  <div class="project--button">
+                    </a>
+                </div>
+                <div class="project--button">
+                    <a href="https://github.com/LuisEncastin/Mobile_first_Batatabit_project" target="_blank">
                       <p>Github</p>
                       <div class="icons8-github2__img"></div>
-                  </div>
+                    </a>
+                </div>
               </div>
           </div>
           <div class="project">
-              <h3>Project's name6</h3>
+              <h3>Wikidocumental</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
               <div class="project--caption">
-                  <img src="/" alt="Project Caption">
+                <img src="https://i.ibb.co/gjBHhLh/wiki-Documental.jpg" alt="wiki-Documental">
               </div>
               <div class="project--subcontainer">
-                  <div class="project--button">
+                <div class="project--button">
+                    <a href="https://luisencastin.github.io/wikiDocumental/" target="_blank">
                       <p>Project</p>
                       <img src="https://img.icons8.com/ios-glyphs/30/000000/portfolio.png" style="height: 25px; width: 25px;"/>
-                  </div>
-                  <div class="project--button">
+                    </a>
+                </div>
+                <div class="project--button">
+                    <a href="https://github.com/LuisEncastin/wikiDocumental" target="_blank">
                       <p>Github</p>
                       <div class="icons8-github2__img"></div>
-                  </div>
+                    </a>
+                </div>
               </div>
           </div>
       </div>
@@ -256,7 +280,7 @@
    <section class="section" id="contact">
       <div class="contactContainer">
         <h2>Contact</h2><br>
-        <p>If you have any questions about my services, or just want to say hello, feel free to contact me.</p>
+        <p>If you have any questions about my services, feel free to contact me.</p>
         <form action="#" class="formulario">
             <input name="from_name" type="text" autocomplete="name" placeholder="Name" value="">
             <input name="reply_to" type="text" autocomplete="email" placeholder="Mail" value="">
@@ -272,13 +296,14 @@
       <h4>You can also follow me at:</h4>
       <ul>
           <li>
-              <div id="icons8-linkedin-rodeado-de-círculo" class="footer--icon"></div>
+            <a href="https://www.linkedin.com/in/luisencastin/" target="_blank"><div id="icons8-linkedin-rodeado-de-círculo" class="footer--icon" ></div></a>
+              
           </li>
           <li>
-              <div id="icons8-github" class="footer--icon"></div>
+              <a href="https://github.com/LuisEncastin" target="_blank"><div id="icons8-github" class="footer--icon"></div></a>
           </li>
           <li>
-              <div id="icons8-whatsapp" class="footer--icon"></div>
+              <a href="https://wa.me/+5217225634812" target="_blank"><div id="icons8-whatsapp" class="footer--icon"></div></a>
           </li>
       </ul>
       <hr id="hr">
