Proyecto listo para producción

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="portfolioGrid">
           <div class="project">
               <h3>Memories App</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
+              <p>Full-stack social media App to share your favorite memories. Project created with React, Redux, Node.js, Express & MongoDB. </p>
               <div class="project--caption">
                 <img src="https://i.ibb.co/vsTgtwb/memories-App.jpg" alt="memories-App">
               </div>
@@ -169,7 +169,7 @@
           </div>
           <div class="project">
               <h3>Travel Advisor app</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
+              <p>App to discover recommendations based on your Geolocation. Project created using the Google Maps API, Google Places API and Open Weather API.</p>
               <div class="project--caption">
                 <img src="https://i.ibb.co/b7bDcS7/travel-Advisor-App.jpg" alt="travel-Advisor-App">
               </div>
@@ -190,7 +190,7 @@
           </div>
           <div class="project">
               <h3>Memory cards game</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
+              <p>Memory Game created using the Pexels API, ReactJS, and ReactJS hooks (useEffect, useState and custom ones).</p>
               <div class="project--caption">
                 <img src="https://i.ibb.co/MM64Pwy/memories-App.jpg" alt="memories-App">
               </div>
@@ -211,7 +211,7 @@
           </div>
           <div class="project">
               <h3>Practical Javascript</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
+              <p>Project to make different calculations with an array of numbers. Skills used: functions scope, arrays methods, DOM Manipulation.</p>
               <div class="project--caption">
                 <img src="https://i.ibb.co/89y880H/javascript-Practico.jpg" alt="javascript-Practico">
               </div>
@@ -232,7 +232,7 @@
           </div>
           <div class="project">
               <h3>Mobile First: batatabit.</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
+              <p>Criptocurrency App Layout. Skills used: mobile first and responsive design principles, CSS best practices, media queries and FIGMA wireframes. </p>
               <div class="project--caption">
                 <img src="https://i.ibb.co/X8sDY9v/batatabit.jpg" alt="batatabit">
               </div>
@@ -253,7 +253,7 @@
           </div>
           <div class="project">
               <h3>Wikidocumental</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, nisi.</p>
+              <p>Web App Layout. Project created using HTML, CSS, Flexbox and animations.</p>
               <div class="project--caption">
                 <img src="https://i.ibb.co/gjBHhLh/wiki-Documental.jpg" alt="wiki-Documental">
               </div>
