Se añade cv y se mejoran media queries

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="animated fadeInLeft principalContainer--body">
                     <h1 class="principalContainer--title">Hello! <strong><br>I'm Luis Encastin.</strong> </h1>
-                    <p class="principalContainer--description">Front-end developer</p>
+                    <p class="principalContainer--description">Front-End developer</p>
                 </div>
             </div>
         </div>
@@ -57,16 +57,18 @@
    <section class="section" id="introduction">
     <div class="introductionContainer">
       <h2>Who am I?</h2><br>
-      <h3>I'm a Javascript web developer and digital marketing passionate.</h3><br>
-      <p>I aspire to create meaningful digital solutions, always driven to achieve the best results for the final customer and my team.<br>
-      I’ve experience working within cross-skilled teams using agile frameworks like SCRUM.</p>
+      <h3>I'm a Javascript Front-End developer  with experience in the MERN Stack: MongoDB, Express, ReactJS and Node.js.</h3><br>
+      <p>I aspire to belong to an innovative company where I can create meaningful digital products to fulfill customer needs and eventually grow in my professional career.<br>
+        My background knowledge includes skills in Front-End development libraries, responsive design (mobile first) and project management.<br>
+        Also, I’ve experience working within cross-functional and remote teams using agile frameworks like SCRUM and tools like Asana, Trello and Slack.</p>
       <p><b>Name:</b> José Luis Encastin Flores</p>
       <p><b>Age:</b> 27 years.</p>
       <p><b>Location:</b> Toluca, Mexico.</p>
-      <p><b>Email:</b> luisencastin@gmail.com</p>
+      <p><b>Email:</b> contacto@luisencastin.com</p>
       <div id="resume">
           <p>If you want to know more about my background, you can check out my resume:</p>
-          <button class="resume--button">Resume</button>
+          <a href="https://drive.google.com/file/d/1VcqECu4ujkYmXWuIdc-AEkxZ1r7ddCyy/view?usp=sharing" class="resume--button" target="_blank">Resume</a>
+          <!-- <button class="resume--button" >Resume</button> -->
       </div>
   </div>
    </section>
