Se añaden meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luis Encastin</title>
+    <meta property="og:title" content="Luis Encastin's Portfolio" />
+    <meta property="og:url" content="https://luisencastin.com/" />
+    <meta property="og:image" content="https://i.ibb.co/1q8xsst/portfolio.jpg" />
+    <meta property="og:description" content="This is my personal Front-End developer portfolio, where I share some of the most relevant projects I've worked on through my studies and also give further information about the technologies I use. " />
     <link rel="stylesheet" href="./styles.css">
 <!-- bootstrap -->
     <link href="./scss/estilos.css" rel="stylesheet">
