Se corrigen las medidas y se añade favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://i.ibb.co/zRKSYw4/LE.png" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Luis Encastin's Portfolio" />
     <meta property="og:url" content="https://luisencastin.com/" />
     <meta property="og:image" content="https://i.ibb.co/1q8xsst/portfolio.jpg" />
@@ -19,7 +20,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark position-fixed">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"></a>
+          <a class="navbar-brand" href="#principal"></a>
           <button class="navbar-toggler me-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -174,7 +175,7 @@
           </div>
           <div class="project">
               <h3>Travel Advisor app</h3>
-              <p>App to discover recommendations based on your Geolocation. Project created using the Google Maps API, Google Places API and Open Weather API.</p>
+              <p>App to discover recommendations based on your Geolocation. Project created with Google Maps API, Google Places API, Open Weather API and Material-UI.</p>
               <div class="project--caption">
                 <img src="https://i.ibb.co/b7bDcS7/travel-Advisor-App.jpg" alt="travel-Advisor-App">
               </div>
@@ -297,25 +298,25 @@
    </section>
 <!-- Footer  -->
    <footer id="footer">
-    <nav class="nav--footer">
-      <h4>You can also follow me at:</h4>
-      <ul>
-          <li>
-            <a href="https://www.linkedin.com/in/luisencastin/" target="_blank"><div id="icons8-linkedin-rodeado-de-círculo" class="footer--icon" ></div></a>
-              
-          </li>
-          <li>
-              <a href="https://github.com/LuisEncastin" target="_blank"><div id="icons8-github" class="footer--icon"></div></a>
-          </li>
-          <li>
-              <a href="https://wa.me/+5217225634812" target="_blank"><div id="icons8-whatsapp" class="footer--icon"></div></a>
-          </li>
-      </ul>
-      <hr id="hr">
-      <div>
-          <p id="prueba">Site built by Luis Encastin - 2022</p>
-      </div>
-  </nav>
+      <nav class="nav--footer">
+        <h4>You can also follow me at:</h4>
+        <ul>
+            <li>
+              <a href="https://www.linkedin.com/in/luisencastin/" target="_blank"><div id="icons8-linkedin-rodeado-de-círculo" class="footer--icon" ></div></a>
+                
+            </li>
+            <li>
+                <a href="https://github.com/LuisEncastin" target="_blank"><div id="icons8-github" class="footer--icon"></div></a>
+            </li>
+            <li>
+                <a href="https://wa.me/+5217225634812" target="_blank"><div id="icons8-whatsapp" class="footer--icon"></div></a>
+            </li>
+        </ul>
+        <hr id="hr">
+        <div>
+            <p id="prueba">Site built by Luis Encastin - 2022</p>
+        </div>
+    </nav>
    </footer>
    
    <!-- scripts -->
