--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://luisencastin.com/" />
     <meta property="og:image" content="https://i.ibb.co/1q8xsst/portfolio.jpg" />
     <meta property="og:description" content="This is my personal Front-End developer portfolio, where I share some of the most relevant projects I've worked on through my studies and also give further information about the technologies I use. " />
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./stylesa.css">
 <!-- bootstrap -->
     <link href="./scss/estilos.css" rel="stylesheet">
 <!-- Javascript -->
