--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           Here are some projects that I would like to share.</p>
       <div class="portfolioGrid">
           <div class="project">
-              <h3>Memories App</h3>
+              <h3>Memories social media App</h3>
               <p>Full-stack social media App to share your favorite memories. Project created with React, Redux, Node.js, Express & MongoDB. </p>
               <div class="project--caption">
                 <img src="https://i.ibb.co/vsTgtwb/memories-App.jpg" alt="memories-App">
@@ -314,6 +314,7 @@
         </ul>
         <hr id="hr">
         <div>
+            <p id="prueba">contacto@luisencastin.com</p>
             <p id="prueba">Site built by Luis Encastin - 2022</p>
         </div>
     </nav>
